--- a/styles.css
+++ b/styles.css
@@ -11,19 +11,37 @@ header {
     margin: 20px 0;
 }
 
+header h1 {
+    font-size: 40px;
+}
+
+header h2 {
+    font-size: 30px;
+}
+
+.player-board {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 40px;
+}
+
 .container {
     display: flex;
     justify-content: center;
+    position: relative;
 }
 
 .game-board {
     display: flex;
     flex-wrap: wrap;
-    width: 660px;
+    width: 600px;
 }
 
 .side-bar {
-    margin-right: 10px;
+    position: absolute;
+    left: 20%;
+    top: 0%;
 }
 
 .reset-board {
@@ -38,8 +56,8 @@ header {
 
 .block {
     border: 2px solid black;
-    height: 220px;
-    width: 220px;
+    height: 200px;
+    width: 200px;
     cursor: pointer;
     font-size: 150px;
     display: flex;
