--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,19 @@
     box-sizing: border-box;
 }
 
+body {
+    background-image: url(https://images.unsplash.com/photo-1509062522246-3755977927d7?q=80&w=3032&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    font-family: 'Handlee', cursive;
+}
+
 header {
     text-align: center;
     margin: 20px 0;
+    border: 1px solid;
+    background-image: url(https://images.unsplash.com/photo-1586075010923-2dd4570fb338?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
 
 header h1 {
@@ -26,6 +36,14 @@ header h2 {
     font-size: 40px;
 }
 
+.player1,
+.player2,
+.player-message {
+    background-image: url(https://images.unsplash.com/photo-1586075010923-2dd4570fb338?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    padding: 10px 15px;
+    border: 1px solid;
+}
+
 .container {
     display: flex;
     justify-content: center;
@@ -36,6 +54,7 @@ header h2 {
     display: flex;
     flex-wrap: wrap;
     width: 600px;
+    background-image: url(https://images.unsplash.com/photo-1586075010923-2dd4570fb338?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
 
 .side-bar {
@@ -45,17 +64,17 @@ header h2 {
 }
 
 .reset-board {
-    font-size: 18px;
-    background-color: transparent;
+    font-size: 20px;
+    background-image: url(https://images.unsplash.com/photo-1586075010923-2dd4570fb338?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
     border: 2px solid;
-    width: 117px;
-    height: 40px;
+    width: 120px;
+    height: 45px;
     cursor: pointer;
-    font-weight: 800;
+    font-family: 'Handlee', cursive;
 }
 
 .block {
-    border: 2px solid black;
+    border: 4px solid black;
     height: 200px;
     width: 200px;
     cursor: pointer;
@@ -65,4 +84,3 @@ header h2 {
     align-items: center;
     user-select: none;
 }
-
