Small fix to the UI
width size and margins, borders where changed for the tic tac toe
board to look more like paper and some padding was add as well

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 
 header {
     text-align: center;
-    margin: 20px 0;
+    margin: 10px 0;
     border: 1px solid;
     background-image: url(https://images.unsplash.com/photo-1586075010923-2dd4570fb338?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
@@ -30,7 +30,7 @@ header h2 {
 }
 
 .player-board {
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     display: flex;
     justify-content: space-evenly;
     font-size: 40px;
@@ -51,15 +51,18 @@ header h2 {
 }
 
 .game-board {
-    display: flex;
-    flex-wrap: wrap;
-    width: 600px;
+    display: grid;
+    grid-template-columns: repeat(3, 200px);
+    width: 650px;
+    padding: 15px 0;
+    justify-content: center;
+    margin-bottom: 15px;
     background-image: url(https://images.unsplash.com/photo-1586075010923-2dd4570fb338?q=80&w=3087&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
 }
 
 .side-bar {
     position: absolute;
-    left: 20%;
+    left: 19%;
     top: 0%;
 }
 
@@ -83,4 +86,40 @@ header h2 {
     justify-content: center;
     align-items: center;
     user-select: none;
+}
+
+.block.tl {
+    border-left: none;
+    border-top: none;
+}
+
+.block.tm {
+    border-top: none;
+}
+
+.block.tr {
+    border-top: none;
+    border-right: none;
+}
+
+.block.ml {
+    border-left: none;
+}
+
+.block.mr {
+    border-right: none;
+}
+
+.block.bl {
+    border-left: none;
+    border-bottom: none;
+}
+
+.bm {
+    border-bottom: none;
+}
+
+.block.br {
+    border-right: none;
+    border-bottom: none;
 }
